--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "firebase": "^8.3.3",
     "notistack": "^1.0.6",
     "react": "^17.0.1",
