--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^3.0.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
