--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "date-fns": "^2.21.3",
     "firebase": "^8.6.2",
     "notistack": "^1.0.9",
