--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.6.0",
@@ -61,5 +62,8 @@
       "prettier --write"
     ],
     "*.{css,md}": "prettier --write"
+  },
+  "overrides": {
+    "@svgr/webpack": "^6.2.1"
   }
 }
